--- a/C1G1.ipynb
+++ b/C1G1.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "83ca2be7-8700-4806-8255-07c098e05964",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a96147d237454001bb4795c131d5186a",
+       "model_id": "a8eb2d6d4bae4493a28fcb8ab3b3655d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=18, description='sample_size', max=200, min=2), Output()), _dom_classes=…"
+       "interactive(children=(IntSlider(value=18, description='sample_size', max=1000, min=2), Output()), _dom_classes…"
       ]
      },
      "metadata": {},
@@ -33,7 +33,6 @@
     "\n",
     "#@title One sample from heights distribution\n",
     "data2 = pd.read_csv(\"data2.csv\")\n",
-    "\n",
     "heightSim = data2['Height']\n",
     "\n",
     "def changeSampleSize(sample_size=18):\n",
@@ -51,13 +50,13 @@
     "  plt.ylabel('Frequency');\n",
     "  plt.axvline(x=meanHgt, color='purple', linestyle='-', linewidth = 3, label=meanHgt);\n",
     "  plt.legend ();\n",
-    "_=interact(changeSampleSize,sample_size=(2,200))"
+    "_=interact(changeSampleSize,sample_size=(2,1000))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025374c1-175f-4293-a0b7-2956023189de",
+   "id": "49cb81c7-827c-45e9-9573-9ea7ac762952",
    "metadata": {},
    "outputs": [],
    "source": []
