--- a/C1G1.ipynb
+++ b/C1G1.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "83ca2be7-8700-4806-8255-07c098e05964",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dfb9e12fe3b4d9bb9d519e9943b5055",
+       "model_id": "3a422b85df0742d9b632ffdf0f70335e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=18, description='sample_size', max=1000, min=2), Output()), _dom_classes…"
+       "interactive(children=(IntSlider(value=18, description='sample_size', layout=Layout(width='500px'), max=1000, m…"
       ]
      },
      "metadata": {},
@@ -35,11 +35,10 @@
     "data2 = pd.read_csv(\"data2.csv\")\n",
     "heightSim = data2['Height']\n",
     "\n",
-    "def changeSampleSize(sample_size=18):\n",
+    "def changeSampleSize(Sample_Size=18):\n",
     "  np.random.seed(4)\n",
     "  SampledHeight=random.choices(heightSim, k=sample_size)\n",
     "  meanHgt=np.mean(SampledHeight)\n",
-    "  print(\"Sample variance:\", np.var(SampledHeight))\n",
     "\n",
     "  sns.displot(SampledHeight,bins=10, kde=False, rug=True, height=6, color = \"mediumpurple\");\n",
     "\n",
@@ -48,21 +47,17 @@
     "  plt.ylabel('Frequency');\n",
     "  plt.axvline(x=meanHgt, color='purple', linestyle='-', linewidth = 3, label=meanHgt);\n",
     "  plt.legend ();\n",
-    "_=interact(changeSampleSize,sample_size=(2,1000))"
+    "\n",
+    "int_widget = interactive(changeSampleSize,sample_size=(2,1000))\n",
+    "int_widget.children[0].layout = Layout(width='500px')\n",
+    "display(int_widget)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "49cb81c7-827c-45e9-9573-9ea7ac762952",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "329f4ff5-ad83-4119-999a-6b0920a369b6",
    "metadata": {},
    "outputs": [],
    "source": []
