--- a/C1G1.ipynb
+++ b/C1G1.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "83ca2be7-8700-4806-8255-07c098e05964",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a422b85df0742d9b632ffdf0f70335e",
+       "model_id": "5845ca56611341659cae6a84d3067336",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=18, description='sample_size', layout=Layout(width='500px'), max=1000, m…"
+       "interactive(children=(IntSlider(value=5, description='Sample_Size', layout=Layout(width='500px'), max=1000, mi…"
       ]
      },
      "metadata": {},
@@ -27,7 +27,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual, Layout\n",
     "import ipywidgets as widgets\n",
     "import random\n",
     "\n",
@@ -35,9 +35,9 @@
     "data2 = pd.read_csv(\"data2.csv\")\n",
     "heightSim = data2['Height']\n",
     "\n",
-    "def changeSampleSize(Sample_Size=18):\n",
+    "def changeSampleSize(Sample_Size=5):\n",
     "  np.random.seed(4)\n",
-    "  SampledHeight=random.choices(heightSim, k=sample_size)\n",
+    "  SampledHeight=random.choices(heightSim, k=Sample_Size)\n",
     "  meanHgt=np.mean(SampledHeight)\n",
     "\n",
     "  sns.displot(SampledHeight,bins=10, kde=False, rug=True, height=6, color = \"mediumpurple\");\n",
@@ -48,7 +48,7 @@
     "  plt.axvline(x=meanHgt, color='purple', linestyle='-', linewidth = 3, label=meanHgt);\n",
     "  plt.legend ();\n",
     "\n",
-    "int_widget = interactive(changeSampleSize,sample_size=(2,1000))\n",
+    "int_widget = interactive(changeSampleSize,Sample_Size=(2,1000))\n",
     "int_widget.children[0].layout = Layout(width='500px')\n",
     "display(int_widget)\n",
     "\n"
